Strips overlapping in VSE #46628

Closed
opened 2015-10-28 17:22:30 +01:00 by flavio · 7 comments

System Information
Windows 7, 32 bits; Radeon graphics card (but this is not a graphic card error)
*I can test on a Debian Stable 64 bits with nVidia if needed

Blender Version
Broken: 2.76 48f7dd6
Worked: all previous stable releases since... 2.68 maybe?

Short description of error
Strips are overlapping (being placed over each other) when using means that are not Grabbing (G).

Exact steps for others to reproduce the error
You shouldn't need a .blend file from me to reproduce this error. Exact steps are:

  1. Add a movie to scene; it is important that you add a video with audio. Now you have:
    1 audio (channel 2)
    1 video (channel 1)

  2. Shift+D and duplicate the video; place it exactly above the original video. Now you have:
    1 audio (channel 4)
    1 video (channel 3)
    1 audio (channel 2)
    1 video (channel 1)

  3. Select your audio strip (channel 4) and, on the strip data panel, change its channel to -1 (say, from 4 to 3). The strip immediately goes to channel 1, overlapping the video strip is there. The same happens if you do these steps with the video from channel 3.

  4. Now this is interesting. Undo the changes and go back to step 2. Select the audio strip (channel 2) and change its channel to 1. The audio strip recognizes that a video strip is there and is placed after it, instead of over it.

  5. The same happens if you do these steps with python.

  6. Curiously, this does not happen if you Grab (G) the audio+video strips and place them overlapping the other - they will recognize the former and be placed before or after it. This was the default behaviour in Blender in all previous releases.

**System Information** Windows 7, 32 bits; Radeon graphics card (but this is not a graphic card error) *I can test on a Debian Stable 64 bits with nVidia if needed **Blender Version** Broken: 2.76 48f7dd6 Worked: all previous stable releases since... 2.68 maybe? **Short description of error** Strips are overlapping (being placed over each other) when using means that are not Grabbing (G). **Exact steps for others to reproduce the error** You shouldn't need a .blend file from me to reproduce this error. Exact steps are: 1. Add a movie to scene; it is important that you add a video with audio. Now you have: 1 audio (channel 2) 1 video (channel 1) 2. Shift+D and duplicate the video; place it exactly above the original video. Now you have: 1 audio (channel 4) 1 video (channel 3) 1 audio (channel 2) 1 video (channel 1) 3. Select your audio strip (channel 4) and, on the strip data panel, change its channel to -1 (say, from 4 to 3). The strip immediately goes to channel 1, overlapping the video strip is there. The same happens if you do these steps with the video from channel 3. 4. Now this is interesting. Undo the changes and go back to step 2. Select the audio strip (channel 2) and change its channel to 1. The audio strip recognizes that a video strip is there and is placed after it, instead of over it. 5. The same happens if you do these steps with python. 6. Curiously, this does not happen if you Grab (G) the audio+video strips and place them overlapping the other - they will recognize the former and be placed before or after it. This was the default behaviour in Blender in all previous releases.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @flavio

Added subscriber: @flavio
Author

Hi, just to add two infos:

  1. Tested and behaviour is the same on a linux Debian Stable machine, nVidia graphics card.

  2. I'm trying to trace back when this behaviour in the strips changed and apparently, it was ok until Blender 2.73 (always release version). In the change to Blender 2.74 this started happening and kept until now, so contrary to what I said, it's not specific to 2.76 - even though it would be nice if it could be fixed.

cheers!

Hi, just to add two infos: 1. Tested and behaviour is the same on a linux Debian Stable machine, nVidia graphics card. 2. I'm trying to trace back when this behaviour in the strips changed and apparently, it was ok until Blender 2.73 (always release version). In the change to Blender 2.74 this started happening and kept until now, so contrary to what I said, it's not specific to 2.76 - even though it would be nice if it could be fixed. cheers!

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

Can confirm the issue. Think it's just matter of searching empty channels in both directions or maybe not doing anything if the empty channel is found when shuffling the strips?

@JulianEisel, really close to what you did for node offset, mind having a look here? :)

Can confirm the issue. Think it's just matter of searching empty channels in both directions or maybe not doing anything if the empty channel is found when shuffling the strips? @JulianEisel, really close to what you did for node offset, mind having a look here? :)
Julian Eisel self-assigned this 2015-11-03 12:14:12 +01:00

This issue was referenced by ecbbb02c88

This issue was referenced by ecbbb02c8832d6e460bf21a4579fc28d7c18fd62
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46628
No description provided.