Fix T46628: Strips overlapping in VSE

Caused by rB27b2ab8cf4ae (although patch D1096 was correct).